--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,8 +1,5 @@
 pipeline {
-  //agent {
-    //docker {
-      //image 'himanshu/maven-himanshu-docker-agent:v1'
-      //args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
+  agent any
     }
   //}
   stages {
